# COSMol-viewer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml  publish.yml  py-docs.yml  python-publish.yml
cosmol_viewer/: Cargo.toml
cosmol_viewer/examples/: 6fi1.cif  animation.py  animation.rs  animation_dynamic_update.py  animation_dynamic_update.rs  offscreen_image.rs  protein_ligand.py  protein_ligand.rs  render_3d_conformer_from_cosmolkit.py  render_3d_conformer_from_cosmolkit.rs  render_molecule.py  render_molecule.rs  render_molecule_from_cosmolkit.py  render_molecule_from_cosmolkit.rs  render_molecule_stick.py  render_molecule_stick.rs  render_molecule_timing.rs  render_protein.py  render_protein.rs  render_protein_surface.py  render_protein_surface.rs
cosmol_viewer/src/: lib.rs
crates/core/: Cargo.toml
crates/core/benches/: molecule_instances.rs
crates/core/src/: lib.rs  scene.rs  utils.rs
crates/core/src/parser/: dssp.rs  mmcif.rs  mod.rs  utils.rs
crates/core/src/shader/: bg_vertex.glsl  canvas.rs  fragment.glsl  fragment_outline.glsl  fragment_sphere_outline.glsl  fragment_stick_outline.glsl  mod.rs  offscreen.rs  vertex.glsl  vertex_sphere.glsl  vertex_sphere_outline.glsl  vertex_stick.glsl  vertex_stick_outline.glsl
crates/core/src/shapes/: mod.rs  molecules.rs  protein.rs  sphere.rs  stick.rs
crates/core/src/surface/: NOTICE  connected.rs  contour.rs  contourdata.rs  distance_grid.rs  mod.rs  patches.rs  protein_templates.rs  radii.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/python/: Cargo.toml  DEV.md  README.md  pyproject.toml
crates/python/docs/: cosmol_viewer.html  index.html  search.js
crates/python/docs/source/: api.rst  conf.py  index.rst
crates/python/src/: lib.rs  shapes.rs  utils.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: js_bridge.rs
