[workspace.package]
edition = "2024"
version = "0.2.14"
authors = ["9028 wjt@cosmol.org"]
repository = "https://github.com/cosmol-studio/COSMol-viewer"
homepage = "https://github.com/cosmol-studio/COSMol-viewer"
keywords = ["molecular", "visualization"]
license = "MIT OR Apache-2.0"
description = "Molecular visualization tools by rust"

[workspace]
resolver = "2"
members = [
    "cosmol_viewer",
    "crates/core",
    "crates/python",
    "crates/wasm",
    ]

[workspace.dependencies]
cosmol_viewer = { version = "0.2.14", path = "cosmol_viewer"}
cosmol_viewer_core = { version = "0.2.14", path = "crates/core" }
pyo3 = { version = "0.28.3", default-features = false, features = ["multiple-pymethods"] }
eframe = { version = "0.34.1", features = ["wayland","x11","glow"], default-features = false }
egui-winit = { version = "0.34.1", features = ["wayland","x11"], default-features = false }
egui_extras = { version = "0.34.1", default-features = false }
serde = { version = "1.0.228" , features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
base64 = "0.22.1"
image = "0.25.9"
flate2 = "1.1.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
panic = "abort"
strip = "symbols"
incremental = false
