[package]
name = "cosmol_viewer"
version.workspace = true
edition.workspace = true
authors = ["9028 <wjt@cosmol.org>"]
homepage = "https://github.com/COSMol-repl/COSMol-viewer"
keywords = ["molecular", "visualization"]
readme = "../README.md"
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
cosmol_viewer_core.workspace = true
cosmolkit.workspace = true

[features]
default = []
wayland = ["cosmol_viewer_core/wayland"]
x11 = ["cosmol_viewer_core/x11"]
