[package]
name = "cosmol_viewer_core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
eframe.workspace = true
serde_json.workspace = true
egui_extras.workspace = true
serde.workspace = true
base64.workspace = true
thiserror.workspace = true
image.workspace = true

glam = { version = "0.32.1" , features = ["serde", "bytemuck"] }
bytemuck = "1.25.0"
dashmap = "6.1.0"
regex = "1.12.3"
rayon = "1.11.0"
na_seq = "0.3.15"
once_cell = "1.21.4"
wide = "1.2.0"
kiddo = "5.3.0"
compile-time = "0.2.0"

[build-dependencies]
resvg = "0.47.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit.workspace = true

[features]
default = []
wayland = []
x11 = []
